--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -243,7 +243,16 @@
     {
      "data": {
       "text/plain": [
-       "452.162"
+       "0.00     445.318\n",
+       "6.25     376.622\n",
+       "12.50    307.926\n",
+       "18.75    238.122\n",
+       "25.00    175.162\n",
+       "31.25    244.966\n",
+       "37.50    313.662\n",
+       "43.75    383.466\n",
+       "50.00    452.162\n",
+       "dtype: float64"
       ]
      },
      "metadata": {},
@@ -256,7 +265,7 @@
     "df = pd.read_excel('outputs/loads.xlsx', index_col=[0, 1])\n",
     "display(df)\n",
     "www = df.loc[[('MaxSF','ClassA')]]\n",
-    "display(www.max().max())"
+    "display(www.max())"
    ]
   },
   {
@@ -645,7 +654,15 @@
    "execution_count": 9,
    "id": "a813f44c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Inputs\n",
     "\n",
@@ -653,7 +670,8 @@
     "alpha = 0 #Angle which earth face of the wal makes with the vertical of the wall\n",
     "beta = 0 #Slope of earth fill\n",
     "delta = 2/3*phi if 2/3*phi<22.5 else 22.5 #Angle of friction between earth and earth fill\n",
-    "h = abut['total_ht']-abut['approach_slab_dep'] #Height of earthfill"
+    "h = abut['total_ht']-abut['approach_slab_dep'] #Height of earthfill\n",
+    "print(delta)"
    ]
   },
   {
@@ -662,6 +680,13 @@
    "id": "b742f781",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.437639999999995\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -724,6 +749,7 @@
    ],
    "source": [
     "ep = unitwt_bfill*h*ka(alpha, beta, delta, phi) #Earth pressure in KN/m^2.\n",
+    "print(ep)\n",
     "force = 0.5*ep*abut['width_of_abut']*h #Force due to earth pressure in KN.\n",
     "forc = [force*math.cos(math.radians(delta)),force*math.cos(math.radians(delta)),force*math.sin(math.radians(delta))] #Horizontal and vertical components.\n",
     "larm = [0.42*h, 0.33*h, -(abut['stem_width']+abut['be_taperwidth'])/2 ] #0.42 times height of wall above base for dry soil and 0.33 for wet.\n",
@@ -1223,6 +1249,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.821440000000003\n"
+     ]
     }
    ],
    "source": [
@@ -1230,7 +1263,8 @@
     "k = ka(alpha, beta, delta, phi)\n",
     "ep = (C-k)*h*unitwt_bfill \n",
     "A8 = pd.DataFrame({\"Force\":.5*ep*h*abut['width_of_abut'],\"Lever arm\":h/3,\"Moment\":(.5*ep*h*abut['width_of_abut'])*h/3},index = ['Seismic force due to backfill'])\n",
-    "display(A8)"
+    "display(A8)\n",
+    "print(ep)"
    ]
   },
   {
@@ -1291,11 +1325,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2\n",
+      "0.20016\n"
+     ]
     }
    ],
    "source": [
     "A9 = pd.DataFrame({\"Force\":(unitwt_bfill*(C-k)*hl*abut['width_of_abut']*h),\"Lever arm\":(0.66*abut['total_ht']),\"Moment\":((unitwt_bfill*(C-k)*hl*abut['width_of_abut']*h)*(0.66*abut['total_ht']))},index = ['Dynamic Surcharge'])\n",
-    "display(A9)"
+    "display(A9)\n",
+    "print(hl)\n",
+    "print(C-k)"
    ]
   },
   {
@@ -3787,7 +3831,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The member is designed for pure flexure.\n"
+      "The member is designed for pure flexure.\n",
+      "15172.920000000004\n"
      ]
     }
    ],
@@ -3796,7 +3841,8 @@
     "res = [A10.iloc[14,0],A11.iloc[14,0]]\n",
     "des_mom = [A10.iloc[14,2],A11.iloc[14,2]]\n",
     "if axf_c > max(res):\n",
-    "    print(\"The member is designed for pure flexure.\")"
+    "    print(\"The member is designed for pure flexure.\")\n",
+    "print(axf_c)"
    ]
   },
   {
@@ -3812,19 +3858,28 @@
    "execution_count": 40,
    "id": "0b389f10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1265.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Inputs\n",
     "\n",
     "Ecu = 0.0035 #Limiting strain in concrete.\n",
     "Es = 0.87*fy/E\n",
     "ce = 75 #Effective cover in mm.\n",
-    "d = (abut['ttl_stembase_width']*1000) - ce #Effective depth of beam.\n",
+    "d = (abut['ttl_stembase_width']*1000) - ce - 10 #Effective depth of beam.\n",
     "beta1 = 0.80952\n",
     "beta2 = 0.416\n",
     "fyd = fy/1.15\n",
     "fctm = 0.259*pow(fck,2/3)\n",
-    "dia = 20 #Diameter of reinforcement bars in mm."
+    "dia = 20 #Diameter of reinforcement bars in mm.\n",
+    "print(d)"
    ]
   },
   {
@@ -3837,7 +3892,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67815.53463505041\n"
+      "66755.93320192143\n"
      ]
     }
    ],
@@ -3892,7 +3947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "id": "bbe6805c",
    "metadata": {},
    "outputs": [
@@ -3900,7 +3955,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK\n"
+      "OK\n",
+      "31389.332284800006\n"
      ]
     }
    ],
@@ -3919,7 +3975,8 @@
     "Check2 = \"OK\" if steel_req<=ast_max else \"Not OK\"\n",
     "if Check2 == \"Not OK\":\n",
     "    x = na(xu,cgs,compf,max(des_mom))\n",
-    "print(Check2)"
+    "print(Check2)\n",
+    "print(steel_req)"
    ]
   },
   {
@@ -3967,8 +4024,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0035199917687280596\n",
-      "4545.675960913743 4080.34589\n",
+      "0.0035478177906152378\n",
+      "4530.624015687442 4080.34589\n",
       "OK\n"
      ]
     }
