--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -10,6 +10,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "c65e1270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pillow in c:\\users\\milan joshi\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages (9.1.0)Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 22.0.2; however, version 22.0.4 is available.\n",
+      "You should consider upgrading via the 'C:\\Users\\Milan Joshi\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pillow"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "b1c4bd7c",
    "metadata": {},
@@ -18,7 +51,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "# import matplotlib.pyplot as plt\n",
-    "from allinput import main_input\n",
+    "# from allinput import main_input\n",
     "from irc6_2007 import *\n",
     "\n",
     "from reaction import find_bm, find_sf, find_ra, find_rb\n",
@@ -44,8 +77,8 @@
    },
    "outputs": [],
    "source": [
-    "if False:\n",
-    "    main_input()\n",
+    "# if False:\n",
+    "#     main_input()\n",
     "\n",
     "df=pd.read_excel('data/span.xlsx',index_col=None,header=None)\n",
     "span = int(df.iloc[2])\n",
@@ -191,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "3ec70ad1",
    "metadata": {},
    "outputs": [
@@ -411,7 +444,7 @@
        "       Class70RT    404.810   491.610   579.810  666.610  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "eeb374fb",
    "metadata": {},
    "outputs": [],
@@ -480,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "3f1b5cb6",
    "metadata": {},
    "outputs": [],
@@ -498,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "efcaaba5",
    "metadata": {},
    "outputs": [],
@@ -520,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "cc5bb796",
    "metadata": {},
    "outputs": [],
@@ -540,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "5080febe",
    "metadata": {},
    "outputs": [
@@ -612,7 +645,7 @@
        "comb4       0          0          1            0.350"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "2657c077",
    "metadata": {},
    "outputs": [],
@@ -653,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3620ecd7",
    "metadata": {
     "pycharm": {
@@ -677,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8da0042b",
    "metadata": {
     "scrolled": true
@@ -761,7 +794,7 @@
        "comb4       0          0          1            0.350   9076.1504  345.537920"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6544b3d0",
    "metadata": {},
    "outputs": [],
@@ -833,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f01895b9",
    "metadata": {
     "pycharm": {
@@ -921,7 +954,7 @@
        "      Class 70RT    0.0000  688.8700   688.8700"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "ddc82381",
    "metadata": {
     "scrolled": true
@@ -1043,7 +1076,7 @@
        "comb4bm     0.0000  688.8700   688.8700"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "6ff1f421",
    "metadata": {
     "scrolled": true
@@ -1146,7 +1179,7 @@
        "Pedestrian load   150.000   150.000   300.00"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "f91e762f",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "25a19821",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "aaf508d8",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1246,7 @@
        "(10870.250000000002, 1422.672, 300.0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "8074cbf1",
    "metadata": {},
    "outputs": [],
@@ -1260,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "69dc7d12",
    "metadata": {},
    "outputs": [
@@ -1409,7 +1442,7 @@
        "comb4bm             0.0000   688.8700   688.8700   4994.3075    241.10450"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "id": "8a8551f9",
    "metadata": {},
    "outputs": [],
@@ -1454,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "id": "5d2c994e",
    "metadata": {},
    "outputs": [],
@@ -1482,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "f2998040",
    "metadata": {},
    "outputs": [],
@@ -1493,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "c2294ae3",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "a01e4a01",
    "metadata": {},
    "outputs": [
@@ -1578,7 +1611,7 @@
        "fdnpd     8265.625000  47527.343750  47527.343750"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "id": "2051ed56",
    "metadata": {},
    "outputs": [],
@@ -1633,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "id": "3488eced",
    "metadata": {},
    "outputs": [],
@@ -1652,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "id": "58222369",
    "metadata": {},
    "outputs": [
@@ -1698,7 +1731,7 @@
        "buoyancy       1028.092334  5911.530923  5911.530923"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "9a2415d0",
    "metadata": {},
    "outputs": [],
@@ -1743,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "id": "29e67947",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1786,7 @@
        "(1.075, 2.3, 9.3, 22.994249999999997)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "30137fde",
    "metadata": {},
    "outputs": [],
@@ -1802,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "id": "343594bc",
    "metadata": {},
    "outputs": [],
@@ -1821,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "id": "69908e5e",
    "metadata": {},
    "outputs": [],
@@ -1841,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "id": "0fd02710",
    "metadata": {},
    "outputs": [],
@@ -1864,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "id": "b93297f1",
    "metadata": {},
    "outputs": [],
@@ -1894,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "id": "d2d8deb9",
    "metadata": {},
    "outputs": [],
@@ -1921,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "id": "b5457465",
    "metadata": {},
    "outputs": [],
@@ -1934,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "id": "8d6493c7",
    "metadata": {},
    "outputs": [],
@@ -1954,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 43,
    "id": "6d031812",
    "metadata": {},
    "outputs": [],
@@ -1967,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "id": "f5dadcaf",
    "metadata": {},
    "outputs": [],
@@ -1985,15 +2018,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "id": "0d233563",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Load</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>Trans</th>\n",
+       "      <th>Vert</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SUP DL</th>\n",
+       "      <td>10870.250000</td>\n",
+       "      <td>1956.645000</td>\n",
+       "      <td>5869.935000</td>\n",
+       "      <td>1304.430000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SUP LL</th>\n",
+       "      <td>1422.672000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>153.648576</td>\n",
+       "      <td>34.144128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PierCap</th>\n",
+       "      <td>1181.250000</td>\n",
+       "      <td>212.625000</td>\n",
+       "      <td>637.875000</td>\n",
+       "      <td>141.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PierStem</th>\n",
+       "      <td>2462.446962</td>\n",
+       "      <td>443.240453</td>\n",
+       "      <td>1329.721360</td>\n",
+       "      <td>295.493635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FdnPad</th>\n",
+       "      <td>8265.625000</td>\n",
+       "      <td>1487.812500</td>\n",
+       "      <td>4463.437500</td>\n",
+       "      <td>991.875000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Load         Long        Trans         Vert\n",
+       "SUP DL    10870.250000  1956.645000  5869.935000  1304.430000\n",
+       "SUP LL     1422.672000     0.000000   153.648576    34.144128\n",
+       "PierCap    1181.250000   212.625000   637.875000   141.750000\n",
+       "PierStem   2462.446962   443.240453  1329.721360   295.493635\n",
+       "FdnPad     8265.625000  1487.812500  4463.437500   991.875000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "seismic = pd.DataFrame([DL_sup, LL_sup, L_piercap, L_pierstem, L_fdnpd],\n",
     "             index= ['SUP DL', 'SUP LL', 'PierCap', 'PierStem', 'FdnPad'],\n",
     "             columns=['Long', 'Trans', 'Vert'])\n",
     "seismic.insert(0, column = 'Load', value = [DL,LL,wt_piercap,wt_pierstem,wt_fdnpd])\n",
+    "display(seismic)\n",
     "# seismic.to_csv('outputs/SeismicForce.csv')"
    ]
   },
@@ -2046,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "3495173d",
    "metadata": {},
    "outputs": [],
@@ -2070,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "18811554",
    "metadata": {},
    "outputs": [],
@@ -2084,11 +2198,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31751e64",
+   "cell_type": "markdown",
+   "id": "1bf9d70c",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -2108,7 +2220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
