--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -15,12 +15,22 @@
     "\n",
     "from Cross import Cross_section,cables, expansion_calc\n",
     "from bridge_specs import box\n",
-    "from allinput import main_input"
+    "# from allinput import main_input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
+   "id": "66adbd64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "1bbea425",
    "metadata": {},
    "outputs": [],
@@ -29,7 +39,7 @@
     "fck = 35 #input grade of concrete\n",
     "span = int(df.iloc[2])\n",
     "no = int(df.iloc[1])\n",
-    "sc=[(j)/(no-1)*50 for j in range(no)]"
+    "sc=[(j)/(no-1)*span for j in range(no)]"
    ]
   },
   {
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ad0223ce",
    "metadata": {},
    "outputs": [],
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f018f8bf",
    "metadata": {},
    "outputs": [],
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "412cbfca",
    "metadata": {},
    "outputs": [],
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d8dfa7ee",
    "metadata": {},
    "outputs": [],
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7118d2f0",
    "metadata": {},
    "outputs": [],
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e7f3d9cb",
    "metadata": {
     "scrolled": true
@@ -209,7 +219,7 @@
        "[1.067, 0.5, 0.635, 0.617]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,12 +243,12 @@
    "id": "7cfe311d",
    "metadata": {},
    "source": [
-    "bm for ll combinations"
+    "bm for live load combinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9ba4d4c3",
    "metadata": {
     "scrolled": true
@@ -252,7 +262,7 @@
        "           0.      ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "52aaf253",
    "metadata": {},
    "outputs": [],
@@ -310,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9eff7697",
    "metadata": {},
    "outputs": [],
@@ -332,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "06f9f8f0",
    "metadata": {},
    "outputs": [],
@@ -345,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ff3adecf",
    "metadata": {},
    "outputs": [],
@@ -366,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3040c834",
    "metadata": {},
    "outputs": [],
@@ -384,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5f290f84",
    "metadata": {
     "scrolled": true
@@ -404,7 +414,7 @@
        " (3277.460536860909, 8675.468950377986)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6d14e7e4",
    "metadata": {},
    "outputs": [],
@@ -433,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c05e5f75",
    "metadata": {},
    "outputs": [
@@ -451,7 +461,7 @@
        " (0.0, -0.0)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "6ff56d9b",
    "metadata": {},
    "outputs": [],
@@ -480,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "0b9d1614",
    "metadata": {},
    "outputs": [
@@ -498,7 +508,7 @@
        " (0.0, -0.0)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "6a6adcb8",
    "metadata": {},
    "outputs": [],
@@ -527,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "cd0a708e",
    "metadata": {},
    "outputs": [
@@ -545,7 +555,7 @@
        " (0.0, -0.0)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "908723be",
    "metadata": {
     "scrolled": true
@@ -576,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "07571fa6",
    "metadata": {},
    "outputs": [],
@@ -616,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "c73d0c6d",
    "metadata": {},
    "outputs": [
@@ -631,7 +641,7 @@
        "        7807.92205534]))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "c2122404",
    "metadata": {},
    "outputs": [
@@ -666,7 +676,7 @@
        "(-2771, 16800)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "9679c1a7",
    "metadata": {},
    "outputs": [
@@ -731,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "bb1d809b",
    "metadata": {},
    "outputs": [
@@ -746,7 +756,7 @@
        "        6506.60171278]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "e3454b2c",
    "metadata": {},
    "outputs": [
@@ -781,7 +791,7 @@
        "(-2771, 12600)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "652cf4a8",
    "metadata": {
     "scrolled": true
@@ -848,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "0463f6b6",
    "metadata": {},
    "outputs": [
@@ -863,7 +873,7 @@
        "        6506.60171278]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "7b6c5c63",
    "metadata": {},
    "outputs": [
@@ -898,7 +908,7 @@
        "(-2771, 16100)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "1a53c824",
    "metadata": {},
    "outputs": [
@@ -963,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "3d98172d",
    "metadata": {},
    "outputs": [
@@ -978,7 +988,7 @@
        "        6506.60171278]))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "9f7f65da",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1023,7 @@
        "(-2771, 12600)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "8656e048",
    "metadata": {},
    "outputs": [
@@ -1078,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "dae524c0",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1103,7 @@
        "        6506.60171278]))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "e559099d",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1138,7 @@
        "(-2771, 12600)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "8f6c8d3f",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "f298b059",
    "metadata": {
     "scrolled": true
@@ -1194,7 +1204,7 @@
        "        6506.60171278]))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,52 +1214,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7602c79",
+   "cell_type": "markdown",
+   "id": "51a6b971",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ultimate strength Check"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d93ac0b8",
+   "metadata": {},
+   "source": [
+    "#### calculation of effective depth"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "639f7821",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "c313b893",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "depth = 4 #input dept from slab top to bottom\n",
+    "n = 14 #input number of cables\n",
+    "effd = [] \n",
+    "for i in sections:\n",
+    "    cpx, cpy = zip(*i.cableprop)\n",
+    "    arr_y = np.array(list(set(cpy)))\n",
+    "    arr_n = np.array([cpy.count(i) for i in set(cpy)])\n",
+    "    ed = depth - sum(arr_y*arr_n)/n\n",
+    "    effd.append(ed)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "aff7f67e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5dcd272",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bedaeb34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.8392857142857144,\n",
+       " 3.0736607142857144,\n",
+       " 3.241071428571429,\n",
+       " 3.341517857142857,\n",
+       " 3.375,\n",
+       " 3.341517857142857,\n",
+       " 3.241071428571429,\n",
+       " 3.0736607142857144,\n",
+       " 2.8392857142857144]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "effd"
+   ]
   },
   {
    "cell_type": "code",
@@ -1390,7 +1415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
