--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -18,7 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pillow in c:\\users\\milan joshi\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages (9.1.0)Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: pillow in c:\\users\\milan joshi\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages (9.1.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -27,13 +28,6 @@
      "text": [
       "WARNING: You are using pip version 22.0.2; however, version 22.0.4 is available.\n",
       "You should consider upgrading via the 'C:\\Users\\Milan Joshi\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -50,12 +44,12 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from allinput import main_input\n",
+    "import matplotlib.pyplot as plt\n",
+    "from allinput import main_input\n",
     "from irc6_2007 import *\n",
     "\n",
     "from reaction import find_bm, find_sf, find_ra, find_rb\n",
-    "# from bridge_specs import box, bearing"
+    "from bridge_specs import box, bearing"
    ]
   },
   {
@@ -103,25 +97,25 @@
    "source": [
     "un_wt = 25\n",
     "\n",
-    "pier_width = 2.3 #input\n",
-    "pier_height = 8.91 #input\n",
+    "pier_width = 1.2 #input\n",
+    "pier_height = 7.3 #input\n",
     "\n",
     "piercap_width = 3.5 #input\n",
-    "piercap_length = 7.5 #input\n",
-    "piercap_height = 1.8 #input\n",
+    "piercap_length = 8 #input\n",
+    "piercap_height = 2.1 #input\n",
     "\n",
-    "pier_length_rect = 3 #input\n",
+    "pier_length_rect = 4 #input\n",
     "pier_width_rect = pier_width\n",
     "\n",
     "pier_height_CT= pier_height + piercap_height\n",
     "pier_height_CG = 11.86 #input height upto girder cg REVIEW!!\n",
     "diameter = pier_width\n",
     "\n",
-    "fdnpd_width = 11.5 #input foundation pad width\n",
-    "fdnpd_length = 11.5 #input foundation pad length\n",
-    "fdnpd_height = 2.5 #input foundation pad thickness\n",
+    "fdnpd_width = 10.5 #input foundation pad width\n",
+    "fdnpd_length = 10.5 #input foundation pad length\n",
+    "fdnpd_height = 2 #input foundation pad thickness\n",
     "\n",
-    "pier_height_hfl = 9.3 #input Height of pier at HFL from Stem Base"
+    "pier_height_hfl = 7.3 #input Height of pier at HFL from Stem Base"
    ]
   },
   {
@@ -1331,39 +1325,39 @@
        "      <td>4895.6250</td>\n",
        "      <td>4895.6250</td>\n",
        "      <td>9791.2500</td>\n",
-       "      <td>56299.6875</td>\n",
-       "      <td>56299.68750</td>\n",
+       "      <td>51404.0625</td>\n",
+       "      <td>51404.06250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other Load</th>\n",
        "      <td>325.0000</td>\n",
        "      <td>325.0000</td>\n",
        "      <td>650.0000</td>\n",
-       "      <td>3737.5000</td>\n",
-       "      <td>3737.50000</td>\n",
+       "      <td>3412.5000</td>\n",
+       "      <td>3412.50000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Surface Load</th>\n",
        "      <td>214.5000</td>\n",
        "      <td>214.5000</td>\n",
        "      <td>429.0000</td>\n",
-       "      <td>2466.7500</td>\n",
-       "      <td>2466.75000</td>\n",
+       "      <td>2252.2500</td>\n",
+       "      <td>2252.25000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pedestrian load</th>\n",
        "      <td>150.0000</td>\n",
        "      <td>150.0000</td>\n",
        "      <td>300.0000</td>\n",
-       "      <td>1725.0000</td>\n",
-       "      <td>1725.00000</td>\n",
+       "      <td>1575.0000</td>\n",
+       "      <td>1575.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>comb1sf</th>\n",
        "      <td>248.4008</td>\n",
        "      <td>462.9352</td>\n",
        "      <td>711.3360</td>\n",
-       "      <td>4411.9836</td>\n",
+       "      <td>4056.3156</td>\n",
        "      <td>1209.27120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1371,7 +1365,7 @@
        "      <td>496.8016</td>\n",
        "      <td>925.8704</td>\n",
        "      <td>1422.6720</td>\n",
-       "      <td>8823.9672</td>\n",
+       "      <td>8112.6312</td>\n",
        "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1379,7 +1373,7 @@
        "      <td>234.4760</td>\n",
        "      <td>927.1240</td>\n",
        "      <td>1161.6000</td>\n",
-       "      <td>7718.1720</td>\n",
+       "      <td>7137.3720</td>\n",
        "      <td>470.44800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1387,7 +1381,7 @@
        "      <td>350.0660</td>\n",
        "      <td>354.6160</td>\n",
        "      <td>704.6820</td>\n",
-       "      <td>4058.7465</td>\n",
+       "      <td>3706.4055</td>\n",
        "      <td>246.63870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1395,7 +1389,7 @@
        "      <td>522.1936</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>522.1936</td>\n",
-       "      <td>2219.3228</td>\n",
+       "      <td>1958.2260</td>\n",
        "      <td>887.72912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1403,7 +1397,7 @@
        "      <td>1044.3872</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>1044.3872</td>\n",
-       "      <td>4438.6456</td>\n",
+       "      <td>3916.4520</td>\n",
        "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1411,7 +1405,7 @@
        "      <td>0.0000</td>\n",
        "      <td>974.0640</td>\n",
        "      <td>974.0640</td>\n",
-       "      <td>7061.9640</td>\n",
+       "      <td>6574.9320</td>\n",
        "      <td>394.49592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1419,7 +1413,7 @@
        "      <td>0.0000</td>\n",
        "      <td>688.8700</td>\n",
        "      <td>688.8700</td>\n",
-       "      <td>4994.3075</td>\n",
+       "      <td>4649.8725</td>\n",
        "      <td>241.10450</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1428,18 +1422,18 @@
       ],
       "text/plain": [
        "                        RL         RR        Sum        MomL         MomT\n",
-       "Dead Load        4895.6250  4895.6250  9791.2500  56299.6875  56299.68750\n",
-       "Other Load        325.0000   325.0000   650.0000   3737.5000   3737.50000\n",
-       "Surface Load      214.5000   214.5000   429.0000   2466.7500   2466.75000\n",
-       "Pedestrian load   150.0000   150.0000   300.0000   1725.0000   1725.00000\n",
-       "comb1sf           248.4008   462.9352   711.3360   4411.9836   1209.27120\n",
-       "comb2sf           496.8016   925.8704  1422.6720   8823.9672      0.00000\n",
-       "comb3sf           234.4760   927.1240  1161.6000   7718.1720    470.44800\n",
-       "comb4sf           350.0660   354.6160   704.6820   4058.7465    246.63870\n",
-       "comb1bm           522.1936     0.0000   522.1936   2219.3228    887.72912\n",
-       "comb2bm          1044.3872     0.0000  1044.3872   4438.6456      0.00000\n",
-       "comb3bm             0.0000   974.0640   974.0640   7061.9640    394.49592\n",
-       "comb4bm             0.0000   688.8700   688.8700   4994.3075    241.10450"
+       "Dead Load        4895.6250  4895.6250  9791.2500  51404.0625  51404.06250\n",
+       "Other Load        325.0000   325.0000   650.0000   3412.5000   3412.50000\n",
+       "Surface Load      214.5000   214.5000   429.0000   2252.2500   2252.25000\n",
+       "Pedestrian load   150.0000   150.0000   300.0000   1575.0000   1575.00000\n",
+       "comb1sf           248.4008   462.9352   711.3360   4056.3156   1209.27120\n",
+       "comb2sf           496.8016   925.8704  1422.6720   8112.6312      0.00000\n",
+       "comb3sf           234.4760   927.1240  1161.6000   7137.3720    470.44800\n",
+       "comb4sf           350.0660   354.6160   704.6820   3706.4055    246.63870\n",
+       "comb1bm           522.1936     0.0000   522.1936   1958.2260    887.72912\n",
+       "comb2bm          1044.3872     0.0000  1044.3872   3916.4520      0.00000\n",
+       "comb3bm             0.0000   974.0640   974.0640   6574.9320    394.49592\n",
+       "comb4bm             0.0000   688.8700   688.8700   4649.8725    241.10450"
       ]
      },
      "execution_count": 24,
@@ -1584,21 +1578,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>piercap</th>\n",
-       "      <td>1181.250000</td>\n",
-       "      <td>6792.187500</td>\n",
-       "      <td>6792.187500</td>\n",
+       "      <td>1470.000000</td>\n",
+       "      <td>7717.500000</td>\n",
+       "      <td>7717.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pierstem</th>\n",
-       "      <td>2462.446962</td>\n",
-       "      <td>14159.070033</td>\n",
-       "      <td>14159.070033</td>\n",
+       "      <td>1082.402637</td>\n",
+       "      <td>5682.613846</td>\n",
+       "      <td>5682.613846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>fdnpd</th>\n",
-       "      <td>8265.625000</td>\n",
-       "      <td>47527.343750</td>\n",
-       "      <td>47527.343750</td>\n",
+       "      <td>5512.500000</td>\n",
+       "      <td>28940.625000</td>\n",
+       "      <td>28940.625000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1606,9 +1600,9 @@
       ],
       "text/plain": [
        "               weight          MomL          MomT\n",
-       "piercap   1181.250000   6792.187500   6792.187500\n",
-       "pierstem  2462.446962  14159.070033  14159.070033\n",
-       "fdnpd     8265.625000  47527.343750  47527.343750"
+       "piercap   1470.000000   7717.500000   7717.500000\n",
+       "pierstem  1082.402637   5682.613846   5682.613846\n",
+       "fdnpd     5512.500000  28940.625000  28940.625000"
       ]
      },
      "execution_count": 29,
@@ -1718,9 +1712,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>buoyancy</th>\n",
-       "      <td>1028.092334</td>\n",
-       "      <td>5911.530923</td>\n",
-       "      <td>5911.530923</td>\n",
+       "      <td>432.961055</td>\n",
+       "      <td>2273.045538</td>\n",
+       "      <td>2273.045538</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1728,7 +1722,7 @@
       ],
       "text/plain": [
        "          weight_reduction         MomL         MomT\n",
-       "buoyancy       1028.092334  5911.530923  5911.530923"
+       "buoyancy        432.961055  2273.045538  2273.045538"
       ]
      },
      "execution_count": 32,
@@ -1783,7 +1777,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.075, 2.3, 9.3, 22.994249999999997)"
+       "(1.075, 1.2, 7.3, 9.416999999999998)"
       ]
      },
      "execution_count": 34,
@@ -2020,7 +2014,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "0d233563",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2053,37 +2049,37 @@
        "    <tr>\n",
        "      <th>SUP DL</th>\n",
        "      <td>10870.250000</td>\n",
-       "      <td>1956.645000</td>\n",
+       "      <td>1731.962204</td>\n",
        "      <td>5869.935000</td>\n",
-       "      <td>1304.430000</td>\n",
+       "      <td>1154.641469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SUP LL</th>\n",
        "      <td>1422.672000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>153.648576</td>\n",
-       "      <td>34.144128</td>\n",
+       "      <td>30.223336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PierCap</th>\n",
-       "      <td>1181.250000</td>\n",
-       "      <td>212.625000</td>\n",
-       "      <td>637.875000</td>\n",
-       "      <td>141.750000</td>\n",
+       "      <td>1470.000000</td>\n",
+       "      <td>234.215813</td>\n",
+       "      <td>793.800000</td>\n",
+       "      <td>156.143875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PierStem</th>\n",
-       "      <td>2462.446962</td>\n",
-       "      <td>443.240453</td>\n",
-       "      <td>1329.721360</td>\n",
-       "      <td>295.493635</td>\n",
+       "      <td>1082.402637</td>\n",
+       "      <td>172.459737</td>\n",
+       "      <td>584.497424</td>\n",
+       "      <td>114.973158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FdnPad</th>\n",
-       "      <td>8265.625000</td>\n",
-       "      <td>1487.812500</td>\n",
-       "      <td>4463.437500</td>\n",
-       "      <td>991.875000</td>\n",
+       "      <td>5512.500000</td>\n",
+       "      <td>878.309298</td>\n",
+       "      <td>2976.750000</td>\n",
+       "      <td>585.539532</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2091,11 +2087,11 @@
       ],
       "text/plain": [
        "                  Load         Long        Trans         Vert\n",
-       "SUP DL    10870.250000  1956.645000  5869.935000  1304.430000\n",
-       "SUP LL     1422.672000     0.000000   153.648576    34.144128\n",
-       "PierCap    1181.250000   212.625000   637.875000   141.750000\n",
-       "PierStem   2462.446962   443.240453  1329.721360   295.493635\n",
-       "FdnPad     8265.625000  1487.812500  4463.437500   991.875000"
+       "SUP DL    10870.250000  1731.962204  5869.935000  1154.641469\n",
+       "SUP LL     1422.672000     0.000000   153.648576    30.223336\n",
+       "PierCap    1470.000000   234.215813   793.800000   156.143875\n",
+       "PierStem   1082.402637   172.459737   584.497424   114.973158\n",
+       "FdnPad     5512.500000   878.309298  2976.750000   585.539532"
       ]
      },
      "metadata": {},
@@ -2108,7 +2104,33 @@
     "             columns=['Long', 'Trans', 'Vert'])\n",
     "seismic.insert(0, column = 'Load', value = [DL,LL,wt_piercap,wt_pierstem,wt_fdnpd])\n",
     "display(seismic)\n",
-    "# seismic.to_csv('outputs/SeismicForce.csv')"
+    "# seismic.to_csv('outputs/SeismicForce.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b797f3b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SUP DL      1731.962204\n",
+       "SUP LL         0.000000\n",
+       "PierCap      234.215813\n",
+       "PierStem     172.459737\n",
+       "FdnPad       878.309298\n",
+       "Name: Long, dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seismic.Long"
    ]
   },
   {
@@ -2121,19 +2143,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e57e0a27",
+   "execution_count": 50,
+   "id": "efc027de",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUP DL      20783.546447\n",
+      "SUP LL          0.000000\n",
+      "PierCap      2424.133663\n",
+      "PierStem      974.397515\n",
+      "FdnPad        878.309298\n",
+      "Name: Long, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "larm_seismic = [(fdnpd_height+pier_height_CT+0.6), (fdnpd_height+pier_height_CT+0.6), (fdnpd_height+pier_height+piercap_height/2), (fdnpd_height+pier_height/2), fdnpd_height/2]\n",
+    "a = np.multiply(np.array(larm_seismic),seismic.Long)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "5d8dea6c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12.0, 12.0, 10.350000000000001, 5.65, 1.0]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "larm_seismic"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2160,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "3495173d",
    "metadata": {},
    "outputs": [],
@@ -2184,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "18811554",
    "metadata": {},
    "outputs": [],
@@ -2199,7 +2251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf9d70c",
+   "id": "732628ee",
    "metadata": {},
    "source": []
   }
