--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "be4275b9",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
-    "from bridge_specs import box\n",
+    "# from bridge_specs import box\n",
     "from Cross import calc_centroid as cg, calc_moi as moi\n",
     "from irc6_2007 import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "06c53779",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2bf4b55f",
    "metadata": {},
    "outputs": [],
@@ -321,48 +321,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "cadf1e4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.925\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#inputs\n",
-    "\n",
+    "df=pd.read_excel('data/abutment.xlsx',index_col=None,header=None)\n",
+    "df2=pd.read_excel('data/abutment2.xlsx',index_col=None,header=None)\n",
+    "# print(df2.iloc[3,0])\n",
     "bearing_ht = 0.3 #assumed including pedestal\n",
     "abut = {\n",
-    "    'total_ht' : 7.0,\n",
+    "    'total_ht' :df.iloc[1,6]+df.iloc[0,2]+df.iloc[1,8],\n",
     "    'wc' : 0.075,\n",
-    "    'backw_ht' : box['pillar_hei']+bearing_ht+0.075, #including wearing cource\n",
-    "    'cap':0.5,\n",
-    "    'stem_ht': 7-(box['pillar_hei']+bearing_ht+0.075)-0.5,\n",
-    "    'bw_width':0.3,\n",
-    "    'edge_to_bearing_c':0.6,\n",
-    "    'bw_to_bearing_c': 0.6,\n",
-    "    'cap_width':0.3+0.6+0.6,\n",
-    "    'stem_width':1.25,\n",
-    "    'be_taperwidth':0.10,\n",
-    "    'width_of_abut':8.4,\n",
-    "    'ttl_stembase_width':1.25+0.10,\n",
-    "    'approach_slab_dep':0.3,\n",
-    "    'approach_slab_len':3.5,\n",
-    "    'haunch':{'stem_haunch':[0.2,0.25],'approach_slab_haunch_rec':[0.25,0.25], 'approach_slab_haunch_tri':[0.25,0.25]} #list of width and height.\n",
+    "    'backw_ht' :df.iloc[0,2], #including wearing cource\n",
+    "    'cap':df.iloc[1,4],\n",
+    "    'stem_ht': df.iloc[1,6],\n",
+    "    'bw_width':df.iloc[1,2],\n",
+    "    'edge_to_bearing_c':df.iloc[0,9],\n",
+    "    'bw_to_bearing_c': df.iloc[1,9],\n",
+    "    'cap_width':df.iloc[0,4],\n",
+    "    'stem_width':df.iloc[0,6],\n",
+    "    'be_taperwidth':df.iloc[0,7],\n",
+    "    'width_of_abut':df2.iloc[1,0],\n",
+    "    'ttl_stembase_width':df2.iloc[0,0],\n",
+    "    'approach_slab_dep':df.iloc[1,8],\n",
+    "    'approach_slab_len':df.iloc[0,8],\n",
+    "    'haunch':{'stem_haunch':[df.iloc[0,5],df.iloc[1,5]],'approach_slab_haunch_rec':[df.iloc[0,0],df.iloc[1,0]], 'approach_slab_haunch_tri':[df.iloc[0,1],df.iloc[1,1]]} #list of width and height.\n",
     "}\n",
     "fdn = {\n",
-    "    'heel' : 4,\n",
-    "    'toe' : 2.5,\n",
-    "    'th' : 1.5,\n",
-    "    'wid' : 9,\n",
-    "    'len' : 7.85\n",
+    "    'heel' : df2.iloc[3,0],\n",
+    "    'toe' : df2.iloc[2,0],\n",
+    "    'th' : df2.iloc[4,0],\n",
+    "    'wid' : df2.iloc[5,0],\n",
+    "    'len' : df2.iloc[2,0]+df2.iloc[3,0]+df2.iloc[0,0]\n",
     "}\n",
-    "print(abut['stem_ht'])"
+    "# print(abut['stem_ht'])"
    ]
   },
   {
@@ -375,16 +369,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "94029f3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#dummy loads\n",
-    "dl = 3000 #dead loads\n",
+    "df1=pd.read_csv('outputs/DL_for_Seismic.csv',index_col=None,header=None)\n",
+    "# print(df1)\n",
+    "dl = df1.iloc[1,3]+df1.iloc[2,3] #dead loads\n",
     "ll = 1000 #live loads including impact\n",
-    "pdl = 200 #pedestrian loads\n",
-    "sdl=250 #Surface Loads"
+    "pdl = df1.iloc[4,3] #pedestrian loads\n",
+    "sdl=df1.iloc[3,3] #Surface Loads"
    ]
   },
   {
@@ -397,16 +393,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "19d0004a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0\n",
+      "0    0\n",
+      "1   35\n",
+      "2  500\n"
+     ]
+    }
+   ],
    "source": [
     "#Inputs\n",
     "\n",
+    "\n",
+    "df1=pd.read_excel('data/material.xlsx',index_col=None,header=None)\n",
+    "# print(df1)\n",
     "E = 200000 #Elasticity of steel\n",
-    "fck = 30 #grade of concrete = M30\n",
-    "fy = 500 #grade of steel = Fe500\n",
+    "fck = df1.iloc[1,0] #grade of concrete = M30\n",
+    "fy = df1.iloc[2,0]#grade of steel = Fe500\n",
     "unitwt_conc = 25 #unit weight of concrete = 25KN/m^3\n",
     "unitwt_bfill = 20 #unit weight of backfill = 20KN/m^3"
    ]
