--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -19,7 +19,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "06c53779",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -4066,8 +4068,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "b8b78ae4",
+   "execution_count": 39,
+   "id": "44c6c5b9",
    "metadata": {},
    "outputs": [
     {
@@ -4075,7 +4077,7 @@
      "output_type": "stream",
      "text": [
       "Enter a trial value of depth of NA:150\n",
-      "Enter a trial value of spacing for reinforcements:120\n"
+      "Enter a trial value of spacing for reinforcements:70\n"
      ]
     }
    ],
@@ -4088,15 +4090,13 @@
     "beta1 = 0.80952\n",
     "beta2 = 0.416\n",
     "dia = 20 #Diameter of reinforcement bars in mm.\n",
-    "ver_dia = 20  #Diameter of vertical reinforcement in mm.\n",
-    "ver_spc = 180 #Spacing of vertical reinforcement in mm.\n",
     "xu = int(input(\"Enter a trial value of depth of NA:\")) # Neutral axis depth\n",
     "spacing = int(input(\"Enter a trial value of spacing for reinforcements:\")) #For main reinforcements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "id": "0ed4dc0f",
    "metadata": {},
    "outputs": [
@@ -4125,7 +4125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "id": "3efba183",
    "metadata": {},
    "outputs": [
@@ -4155,7 +4155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "id": "9fe49d3c",
    "metadata": {
     "scrolled": true
@@ -4178,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "id": "bbe6805c",
    "metadata": {},
    "outputs": [
@@ -4212,7 +4212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "id": "ff459318",
    "metadata": {},
    "outputs": [
@@ -4220,7 +4220,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter lower value of spacing:70\n",
       "70\n",
       "OK\n"
      ]
@@ -4246,7 +4245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "id": "7a37908f",
    "metadata": {},
    "outputs": [
@@ -4290,7 +4289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
    "id": "07ecb845",
    "metadata": {},
    "outputs": [
@@ -4775,19 +4774,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "eb6a98fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "#Check for Cracking criteria\n",
-    "\n",
+    "ro1_eff = ast_pro/(abut['width_of_abut'] * min([abut['ttl_stembase_width']-((abut['ttl_stembase_width']*1000) - ce - 10), abut['ttl_stembase_width']-(x/3), abut['ttl_stembase_width']/2]))\n",
     "\n",
     "if ((((min([W1.iloc[14,2],W2.iloc[14,2],W3.iloc[14,2]]))*pow(10,6))/(ast_pro*cgs))-(k_t*(0.259*pow(fck,2/3))*(1+(E/(22*pow(f_cm/12.5,0.3)*1000))*(ast_pro/ac_eff)))/(ast_pro/ac_eff))/E >= 0.6*(((min([W1.iloc[14,2],W2.iloc[14,2],W3.iloc[14,2]]))*pow(10,6))/(ast_pro*cgs))/E:\n",
     "    diff_e = ((((min([W1.iloc[14,2],W2.iloc[14,2],W3.iloc[14,2]]))*pow(10,6))/(ast_pro*cgs))-(k_t*(0.259*pow(fck,2/3))*(1+(E/e_cm)*(ast_pro/ac_eff)))/(ast_pro/ac_eff))/E\n",
     "else:\n",
     "    diff_e = 0.6*(((min([W1.iloc[14,2],W2.iloc[14,2],W3.iloc[14,2]]))*pow(10,6))/(ast_pro*cgs))/E\n",
-    "sr_max = 3.4*c+(0.17*dia)/ro1_eff\n",
+    "sr_max = 3.4*c+(0.17*dia)/(ast_pro/(abut['width_of_abut'] * min([abut['ttl_stembase_width']-((abut['ttl_stembase_width']*1000) - ce - 10), abut['ttl_stembase_width']-(x/3), abut['ttl_stembase_width']/2])))\n",
+    "\n",
     "\n",
     "#Crack width in mm\n",
     "cr_wid = sr_max*diff_e\n",
@@ -4805,20 +4813,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "4e7f975a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter trial spacing:70\n",
-      "Enter a trial diameter:16\n",
-      "2872.3132832820966\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ar_list = [0.25*(math.pi*(pow(dia,2)/4)*(1000/spacing)), (0.001*1000*abut['ttl_stembase_width']*1000)/2]\n",
     "spacing_h = int(input(\"Enter trial spacing:\"))\n",
@@ -4846,7 +4844,7 @@
    "outputs": [],
    "source": [
     "# check_ar = math.pi*(pow(dia,2)/4)*(1000/spacing)\n",
-    "ast_vert = (12/100) * steel_r\n",
+    "ast_vert = (12/100) * steel_req #Taking minimum reinforcement for the vertical reinforcements\n",
     "print(ast_vert) "
    ]
   },
